2017-07-14 Roman (stable)
- !!!!:DB.LibsDB.vcaElectroEls: Significant cleared and expanded. Will be continued to finish the cleaning and translation.
- UI.VCAEngine: Limit of the generic attributes "geomXsc" and "geomYsc" was expanded from [0.1:100] to [0.01:100].
- FIX:UI.Vision: ID of copying and moving widgets was set to encode for TSYS::oscdID to prevent errors here for wrong symbols.
    FIX:Included widgets resizing and moving in the developing mode by keyboard were fixed for mouse cursor position changing even to the widget's changes.
    !!!!:FIX: Main window maximizing and opening to full-screen were fixed to prevent the operations by the visualizer specific attribute "runWin"
	working only from the master page. The main window size was set to fit the master page size after return from maximizing and opening to full-screen and
	starting in original size.
- FIX:UI.WebVision: Text of buttons into the custom mode was fixed for next line symbol "\n" and words breaking at overflow by CSS property "word-break".


2017-07-05 Roman (stable)
- FIX:DB.LibsDB.vcaBase: doc.docMessRep was final fixed for filtering by level, for all languages.
- FIX:DB.LibsDB.vcaElectroEls: Fixed for procedures of the last items: "stGen", "stGen1", "conBus".
- SYS.acinclude.m4: Macro AX_PTHREAD was updated to last version.
- SYS:Changelog: Significant cleaned in process of releasing 0.8.18 LTS.
- SYS,DAQ.OPC_UA.libOPC_UA: ieee754.h included to adapt for float point in IEEE754.
- DAQ.{LogicLev,ModBus}: Values size of stored attributes of logical parameters expanded from 200 to 1000000.
- FIX:DAQ.LogicLev: Fixed for uninitiated access to "err(f_err)" attribute into debug mode.
- FIX:{DAQ,Protocol}.ModBus: The extended type "String" was fixed to ModBus register's natural order in "BigEndian", seen on Sycon Instruments STM-3.
    FIX:Syntax highlighting was fixed for four digits-registers for extended types "_u4", "_d".